# ledgame_qml

./: .gitignore  CMakeLists.txt  LedGameInterface.h  README.md  ledgame.cpp  ledgame.h  ledgame.pro  ledgame_test.cpp  ledgameui.cpp  ledgameui.h  main.cpp  qml.qrc  readme.docx  resource.qrc  ui.qrc  widget.cpp  widget.h  widget_test.cpp  widget_test.h
app/: CMakeLists.txt  ledgameapplication.cpp  ledgameapplication.h  main.cpp
controller/: controller.pri  ledgameusecase.cpp  ledgameusecase.h  ledgameusecase_test.cpp  stepcontroller.cpp  stepcontroller.h  stepcontroller_test.cpp
key/: CMakeLists.txt  colorrule.cpp  colorrule.h  generatorinterface.h  keys.cpp  keys.h  keysequence.cpp  keysequence.h
keysequence/: colorrule.cpp  colorrule.h  colorrule_test.cpp  generatorinterface.cpp  generatorinterface.h  generatorinterface_test.cpp  keysequence.h  keysequence.pri  keysequence_test.cpp
ledbutton/: ledbutton.cpp  ledbutton.h  ledbutton.pri
ledindicator/: ledindicator.h  ledindicator.pri  ledindicator_test.cpp
src/: CMakeLists.txt  ledgameapplication.cpp  ledgameapplication.h  main.cpp  qml.qrc
src/key/: generatorinterface.cpp
src/ui/: CMakeLists.txt  ledgameui.cpp  ledgameui.h
src/ui/controller/: colorcontroller.cpp  colorcontroller.h  keycontroller.cpp  keycontroller.h  keygenerator.cpp  keygenerator.h  ledgamecontroller.cpp  ledgamecontroller.h
src/ui/models/: buttonmodel.cpp  buttonmodel.h  ledmodel.cpp  ledmodel.h
src/ui/qml/: LedButtonType.qml  LedButtons.qml  LedLabels.qml  LedLightType.qml  main.qml
src/usecase/: ledgameinterface.h  ledgameusecase.cpp  ledgameusecase.h  usecase.cpp  usecase.h  usinterface.h
test/: CMakeLists.txt
test/googletest-main/: gtest_dependency.pri
test/key/: colorrule_test.cpp  keysequence_test.cpp
test/ui/: colorcontroller_test.cpp  keycontroller_test.cpp  ledgameui_test.cpp
test/usecase/: generatorinterface_test.cpp  ledgame_test.cpp  ledgameusecase_test.cpp  usecase_test.cpp
ui/: CMakeLists.txt  ledgameui.cpp  ledgameui.h
ui/models/: buttonmodel.cpp  buttonmodel.h  ledmodel.cpp  ledmodel.h
ui/qml/: LedButtonType.qml  LedButtons.qml  LedIndicator.qml  LedLabels.qml  main.qml
uicomponent/: LedButtons.qml  LedLabels.qml  ledgameui.cpp  ledgameui.h  ledgameui_test.cpp  ledindicator.cpp  ledindicator.h  ledindicator_test.cpp  main.qml  uicomponent.pri
uicomponent/qml/: LedLabels.qml
usecase/: CMakeLists.txt  ledgame.cpp  ledgameusecase.cpp  ledgameusecase.h  ledgameusecase_test.cpp  usecase.cpp  usecase.h  usecase.pri
